--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -15,7 +15,7 @@
             </a>
 
             <a href="/my-applications/{{id}}" class="list-group-item list-group-item-action ripple
-        {{#resumeActive}}active{{/resumeActive}}" aria-current="true">
+        {{#myApplicationActive}}active{{/myApplicationActive}}" aria-current="true">
                 <i class="fas fa-list fa-fw me-3"></i><span>My applications</span>
             </a>
             {{/isCandidate}}
