--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -2,6 +2,21 @@
 {{#userApp}}
 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
+        <div class="container-fluid imageContainer">
+            {{#isUserCompany}}
+            <a href="/dashboard-company/{{id}}">
+                <img src="../../../static/images/logo.jpeg"
+                     class="image">
+            </a>
+            {{/isUserCompany}}
+            {{^isUserCompany}}
+            <a href="/dashboard/{{id}}">
+                <img src="../../../static/images/logo.jpeg"
+                     class="image">
+            </a>
+            {{/isUserCompany}}
+        </div>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         <div class="list-group list-group-flush mx-3 mt-4">
             {{#isCandidate}}
             <a href="/dashboard/{{id}}" class="list-group-item list-group-item-action ripple
@@ -30,7 +45,7 @@
         {{#jobs-companyActive}}active{{/jobs-companyActive}}" aria-current="true">
                 <i class="fas fa-briefcase fa-fw me-3"></i><span>Jobs company</span>
             </a>
-            {{#isDecider}}
+            {{^isDecider}}
             <a href="/announcement/{{id}}" class="list-group-item list-group-item-action py-2 ripple
         {{#announcementActive}}active{{/announcementActive}}">
                 <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Announcement</span>
@@ -44,6 +59,34 @@
             </a>
             {{/isAdmin}}
 
+        </div>
+        <div class="profile">
+            <!-- Avatar -->
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle d-flex align-items-center"
+                       id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown">
+                        <i class="fa fa-user"></i>&nbsp;{{firstName}} {{lastName}}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+
+                        <li>
+                            <a class="dropdown-item btn-outline-secondary" href="/user-profile/{{id}}">
+                                <i class="far fa-user-circle"></i>&nbsp; My profile</a>
+                        </li>
+                        {{#isUserCompany}}
+                        <li>
+                            <a class="dropdown-item btn-outline-secondary" href="/profile/{{id}}">
+                                <i class="far fa-building"></i>&nbsp; Company profile</a>
+                        </li>
+                        {{/isUserCompany}}
+                        <li>
+                            <a class="dropdown-item btn-outline-secondary" href="/main-page">
+                                <i class="fa fa-sign-out"></i>&nbsp;Logout </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
