--- a/src/main/resources/templates/jobs-company.html
+++ b/src/main/resources/templates/jobs-company.html
@@ -17,14 +17,13 @@
 <header>
 
     {{>fragments/sidebar}}
-    {{>fragments/navbar}}
 
 </header>
 <!--Main Navigation-->
 
 <!--Main layout-->
 
-<main style="margin-top: 80px; margin-left: 50px">
+<main style="margin-top: 30px; margin-left: 50px">
     <div class="card" style="width: 70rem; height: 41rem;">
         <p id="page-title"><b>Jobs company</b></p>
         {{^isOperator}}
@@ -255,7 +254,7 @@
                                                     <label class="form-label"
                                                            for="responsability">Responsability<span
                                                             class="error">*</span></label>
-                                                    <textarea id="responsability" rows="4"
+                                                    <textarea id="responsibility" rows="4"
                                                               name="responsability"
                                                               class="form-control"
                                                               required></textarea>
