--- a/src/main/resources/static/style/navigation-style.css
+++ b/src/main/resources/static/style/navigation-style.css
@@ -55,6 +55,11 @@ body {
 }
 
 .profile {
-    padding-top: 100%;
+    padding-top: 120%;
     padding-left: 20%;
+}
+
+.container {
+    width: 300px;
+    height: 50px;
 }
