--- a/src/main/resources/templates/fragments/main-navbar.html
+++ b/src/main/resources/templates/fragments/main-navbar.html
@@ -1,16 +1,15 @@
 <link rel="stylesheet" href="../../../static/style/main-navbar-style.css">
-
 <!-- Navbar -->
 <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <!-- Container wrapper -->
     <div class="container-fluid">
-        <img src="../../static/images/logo.jpeg"
-             class="image">
+        <a href="/">
+            <img src="../../static/images/logo.jpeg" class="image">
+        </a>
 
         <ul class="navbar-nav ms-auto d-flex flex-row">
-
             <a href="/accounts" type="button" class="btn btn-primary btn-sm"
-                    data-mdb-target="register">
+               data-mdb-target="register">
                 <i class="fas fa-user-plus"></i>&nbsp;
                 <span>Register</span>
             </a>
@@ -20,9 +19,7 @@
                 <i class="fa fa-sign-in"></i>&nbsp;
                 <span>Login</span>
             </a>
-
         </ul>
-
     </div>
 </nav>
 <!-- Navbar -->
