added register button on login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,9 +52,21 @@
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="submit" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
-                        </button>
+                        <div class="row">
+                            <div class="col-6">
+                                <button type="submit" class="btn btn-primary btn-lg"
+                                        style="padding-left: 2.5rem; padding-right: 2.5rem;"><i class="fa fa-sign-in"></i>&nbsp;
+                                    <span>Login</span>
+                                </button>
+                            </div>
+                            <div class="col-6">
+                                <a href="/accounts" type="button" class="btn btn-primary btn-lg"
+                                   data-mdb-target="register">
+                                    <i class="fas fa-user-plus"></i>&nbsp;
+                                    <span>Register</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                 </form>
